--- a/tests/config_files/enzyme_no_allostery.yml
+++ b/tests/config_files/enzyme_no_allostery.yml
@@ -1,9 +1,14 @@
 ---
 reactions:
-  A + S -> AS:    [k_AS+, 20]
-  AS    -> A + S: [k_AS-, 10]
-  AS    -> A + P: [f_P,   10]
-  B + P -> BP:    [k_BP+, 10]
-  BP    -> B + P: [k_BP-, 10]
-  P     -> 0:     [d_P,    0]
-  0     -> S:     [b_S,    0]
+  A + S -> AS:    [k_S+,  20]
+  AS    -> A + S: [k_S-,  10]
+  AS    -> A + P: [k_cat, 10]
+  B + P -> BP:    [k_P+,  10]
+  BP    -> B + P: [k_P-,  10]
+  P     -> 0:     [gamma,  0]
+  0     -> S:     [beta,   0]
+constraints:
+  - A + AS = 1
+  - B + BP = 1
+  - P <= 5
+  - S <= 5
