--- a/c3s/config_files/allostery.yml
+++ b/c3s/config_files/allostery.yml
@@ -1,5 +1,7 @@
 ---
 reactions:
+  0 -> S:        [beta, 1]
+
   A -> A*:       [k_A*+, 2]
   A* -> A:       [k_A*-, 1]
   A + S -> AS:   [k_S+, 2]
@@ -8,12 +10,14 @@ reactions:
   A*S -> A* + S: [k_S*-, 1]
   AS -> A*S:     [k_AS*+, 2]
   A*S -> AS:     [k_AS*-, 1]
+
   AS -> A + P:   [k_cat, 1]
   A*S -> A* + P: [k_cat*, 1]
-  B + P -> BP:   [k_BP+, 1]
-  BP -> B + P:   [k_BP-, 1]
-  P -> 0:        [gamma_P, 1]
-  0 -> S:        [beta_S, 1]
+
+  B + P -> BP:   [k_P+, 1]
+  BP -> B + P:   [k_P-, 1]
+
+  P -> 0:        [gamma, 1]
 constraints:
   - A + A* + A*S + AS = 1
   - B + BP = 1
